# visual-asset-management-system

./: .checkov.yaml  .eslintrc.js  .gitallowed  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaksignore  .gitmessage  .jscpd.json  .prettierignore  .prettierrc  .versionrc.json  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ConfigurationGuide.md  DeveloperGuide.md  External-S3-Setup-Guide.md  NOTICE  NOTICE.md  PermissionsGuide.md  README.md  RELEASE.md  VAMS_API.yaml  VAMS_API_Tests.postman_collection.json  VAMS_API_Tests.postman_collection.v1.x.json  build  index.html  package-lock.json  package.json  sitemap.xml  tsconfig.json
backend/: .flake8  .gitignore  CLAUDE.md  Dockerfile  README.rst  README.txt  conftest.py  localDev_oauth2_server.py  makefile  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vams-local.conda.yaml
backend/backend/: __init__.py  localDev_api_server.py
backend/backend/common/: __init__.py  constants.py  dynamodb.py  metadataSchemaValidation.py  s3.py  stepfunctions_builder.py  validators.py
backend/backend/customConfigCommon/: __init__.py  customAuthClaimsCheck.py  customAuthLoginProfile.py  customMFATokenScopeCheck.py
backend/backend/customLogging/: auditLogging.py  logger.py
backend/backend/customResources/: getVpcEndpointIps.py
backend/backend/functions/assets/: uploadAssetWorkflow.py
backend/backend/handlers/: __init__.py
backend/backend/handlers/assetLinks/: assetLinksMetadataService.py  assetLinksService.py  createAssetLink.py  deleteAssetLinksService.py  getAssetLinksService.py
backend/backend/handlers/assets/: assetColumns.py  assetCount.py  assetExportService.py  assetFiles.py  assetService.py  assetVersions.py  createAsset.py  downloadAsset.py  fetchVisualizerAsset.py  ingestAsset.py  metadata.py  revertAsset.py  sqsUploadFileLarge.py  streamAsset.py  streamAuxiliaryPreviewAsset.py  uploadAllAssets.py  uploadAsset.py  uploadAssetV2.py  uploadFile.py
backend/backend/handlers/auth/: __init__.py  apiGatewayAuthorizerHttp.py  apiKeyService.py  authConstraintsService.py  authConstraintsTemplateService.py  authLoginProfile.py  authService.py  cognitoUserService.py  constraints.py  finegrainedaccessconstraints.py  groups.py  pretokengen.py  pretokengenv1.py  pretokengenv2.py  routes.py  scopeds3access.py
backend/backend/handlers/authn/: __init__.py
backend/backend/handlers/authz/: __init__.py  opensearch.py
backend/backend/handlers/comments/: addComment.py  commentService.py  editComment.py
backend/backend/handlers/config/: configService.py
backend/backend/handlers/databases/: createDatabase.py  databaseService.py
backend/backend/handlers/indexing/: assetIndexer.py  crReindexer.py  fileIndexer.py  snsQueuing.py  sqsBucketSync.py  streams.py
backend/backend/handlers/metadata/: __init__.py  create.py  delete.py  metadataService.py  read.py  test_metadata.py  update.py
backend/backend/handlers/metadataschema/: metadataSchemaService.py  schema.py
backend/backend/handlers/pipelines/: createPipeline.py  enablePipeline.py  pipelineService.py
backend/backend/handlers/roles/: createRole.py  roleService.py
backend/backend/handlers/search/: search.py
backend/backend/handlers/sendEmail/: sendEmail.py
backend/backend/handlers/subscription/: checkSubscriptionService.py  subscriptionService.py  unsubscribeService.py
backend/backend/handlers/tagTypes/: createTagTypes.py  tagTypeService.py
backend/backend/handlers/tags/: createTag.py  tagService.py
backend/backend/handlers/userRoles/: userRolesService.py
backend/backend/handlers/visualizerpipelines/: constructPipeline.py  executeVisualizerPCPipeline.py  openPipeline.py  pipelineEnd.py
backend/backend/handlers/workflows/: __init__.py  createWorkflow.py  executeWorkflow.py  importGlobalPipelineWorkflow.py  listExecutions.py  processWorkflowExecutionOutput.py  sqsAutoExecuteWorkflow.py  workflowCommon.py  workflowService.py
backend/backend/localMockData/: mockRoles.py
backend/backend/localWebDevelopment/: README.md  local_auth_server.py
backend/backend/localWebDevelopment/oauth2_local_templates/: login.html
backend/backend/logging/: logger.py
backend/backend/models/: apiKeys.py  assetExport.py  assetLinks.py  assets.py  assetsV2.py  assetsV3.py  common.py  databases.py  indexing.py  metadata.py  metadataSchema.py  pipelines.py  roleConstraints.py  search.py  tag.py  user.py  workflows.py
backend/backend/models/assets/: __init__.py
backend/lambdaLayers/authorizer/: pyproject.toml  requirements.txt
backend/lambdaLayers/base/: pyproject.toml  requirements.txt
backend/lambdaLayers/serviceSDK/: pyproject.toml  requirements.txt
backend/localDev_oauth2_templates/: login.html
backend/tests/: README.md  __init__.py  conftest.py  test_backend.py  test_env.py  test_sample.py
backend/tests/api/database/: test_database_api.py
backend/tests/common/: test_stepfunctions_builder.py
backend/tests/functions/comments/: conftest.py  test_add_comment.py  test_add_comments.py  (+3 more)
backend/tests/mocks/: __init__.py
backend/tests/utils/: api_test_utils.py  lambda_test_utils.py
tools/VamsCLI/: CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
tools/VamsCLI/docs/: AUTHENTICATION.md  DEVELOPMENT.md  INSTALLATION.md
tools/VamsCLI/tests/: __init__.py  conftest.py  test_api_key.py  test_asset_links_commands.py  test_asset_links_metadata.py  test_asset_version_commands.py  test_asset_version_new_commands.py  test_assets.py  test_assets_export.py  test_cli.py  test_constraint.py  test_database_commands.py  test_feature_switches.py  test_file_management.py  test_file_upload.py  test_industry_spatial_glb.py  test_logging.py  test_metadata.py  test_metadata_commands.py  test_metadata_schema_commands.py  test_profiles.py  test_retry_functionality.py  test_role.py  test_search.py  test_tag_commands.py  test_tag_type_commands.py  test_user_cognito.py  test_user_role.py  test_verbose_mode.py  test_workflow.py
tools/VamsCLI/vamscli/: __init__.py  __main__.py  constants.py  main.py  version.py
(+2213 files in other folders)
