[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kurt Scheuringer",email = "scheurik@amazon.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "aws-lambda-powertools (==2.36.0)",
    "pydantic (==1.10.7)",
    "opensearch-py (==2.5.0)",
    "casbin (==1.33.0)",
    "locked-dict (==2023.10.22)",
    "boto3 (==1.34.84)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
flake8 = "6.0.0"
coverage = "7.1.0"
pytest-mock = "3.12.0"
moto = "5.1.0"
pytest-watch = "4.2.0"
mypy = "1.0"
boto3 = "1.34.84"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
