[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vamscli"
dynamic = ["version"]
description = "Command Line Interface for Visual Asset Management System (VAMS)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "AWS Labs", email = "aws-labs@amazon.com"}
]
maintainers = [
    {name = "AWS Labs", email = "aws-labs@amazon.com"}
]
keywords = ["aws", "vams", "cli", "visual", "asset", "management", "system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "boto3>=1.26.0",
    "pycognito>=2024.5.1",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "geojson>=3.2.0",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
vamscli = "vamscli.main:main"

[project.urls]
Homepage = "https://github.com/awslabs/visual-asset-management-system"
Repository = "https://github.com/awslabs/visual-asset-management-system"
Documentation = "https://github.com/awslabs/visual-asset-management-system/blob/main/README.md"
"Bug Reports" = "https://github.com/awslabs/visual-asset-management-system/issues"

[tool.setuptools.dynamic]
version = {attr = "vamscli.version.__version__"}

[tool.setuptools.packages.find]
include = ["vamscli*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async tests",
]
