[tool.poetry]
name = "authorizerlambdalayer"
version = "0.1.0"
description = ""
authors = ["Kurt Scheuringer <scheurik@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^3.19.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
requests = "^2.32.5"
cryptography = "^45.0.6"
joserfc = "1.6.1"
urllib3 = "2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"