[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["Kurt Scheuringer <scheurik@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-lambda-powertools = "2.36.0"
boto3 = "1.34.84"
mypy-boto3-stepfunctions = "1.34.0"
opensearch-py = "2.5.0"
pydantic = "1.10.7"
casbin = "1.36.0"
locked-dict = "^2023.10.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
