[tool.poetry]
name = "servicesdk"
version = "0.1.0"
description = ""
authors = ["Kurt Scheuringer <scheurik@amazon.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
stepfunctions = "^2.3.0"
casbin = "1.36.0"
aws-lambda-powertools = "^3.2.0"
locked-dict = "^2023.10.22"
sagemaker = "^2.223.0"
setuptools = "^75.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
