[tool.poetry]
name = "metadata3dLabelingLambdaLayer"
version = "0.1.0"
description = ""
authors = ["Kurt Scheuringer <scheurik@amazon.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^12.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
