[tool.poetry]
name = "kubernetes-layer"
version = "0.1.0"
description = "Kubernetes Python client Lambda layer for EKS operations"
authors = ["VAMS Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = "26.1.0"
boto3 = ">=1.28.0"
PyYAML = ">=6.0"
requests = ">=2.28.0"
urllib3 = "<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
